Fix invisible cursor on load

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   top: 487px;
 }
 #historyDiv .cm-s-night.CodeMirror{
-  background: transparent;
+  background: #303030;
   height: 125px;
   top: 477px;
 }
